service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nyancat
  namespace: kcd
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: nyancat
