ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nyancat
  namespace: kcd
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - 'nyancat.kcd.sikademo.com'
      secretName: nginx-tls
  rules:
    - host: 'nyancat.kcd.sikademo.com'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nyancat
                port:
                  number: 80
